--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>Bienvenue sur le Tableau de Bord</h1>
-    <p>Bonjour, <%= user.username %> (<%= user.email %>)</p>
-    <p>Date : <%= new Date().toLocaleDateString('fr-FR') %></p>
+    <p>Bonjour</p>
+    <p>Date du jour : <%= new Date().toLocaleDateString('fr-FR') %></p>
 
     <h2>Menu</h2>
     <ul>
