--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inscription</title>
+    <title>Modifier l'Utilisateur</title>
     <style>
       .alert {
         color: red;
@@ -25,31 +25,45 @@
     </style>
   </head>
   <body>
-    <h1>Inscription</h1>
+    <h1>Modifier l'Utilisateur <%= user.userName %></h1>
+
+    <!-- Bouton pour retourner à la gestion des utilisateurs -->
+    <a href="/users" class="btn">Retour à la Gestion des Utilisateurs</a
+    ><br /><br />
 
     <% if (typeof error !== 'undefined') { %>
     <div class="alert"><%= error %></div>
     <% } %>
 
-    <form action="/register" method="POST">
+    <form action="/users/<%= user._id %>?_method=PUT" method="POST">
       <label for="userName">Nom :</label>
-      <input type="text" id="userName" name="userName" required /><br /><br />
+      <input
+        type="text"
+        id="userName"
+        name="userName"
+        value="<%= user.userName %>"
+        required
+      /><br /><br />
 
       <label for="email">Email :</label>
-      <input type="email" id="email" name="email" required /><br /><br />
-
-      <label for="password">Mot de passe :</label>
       <input
-        type="password"
-        id="password"
-        name="password"
+        type="email"
+        id="email"
+        name="email"
+        value="<%= user.email %>"
         required
       /><br /><br />
 
       <label for="role">Rôle :</label>
-      <input type="text" id="role" name="role" required /><br /><br />
+      <input
+        type="text"
+        id="role"
+        name="role"
+        value="<%= user.role %>"
+        required
+      /><br /><br />
 
-      <button type="submit" class="btn">S'inscrire</button>
+      <button type="submit" class="btn">Mettre à jour</button>
     </form>
   </body>
 </html>
