--- a/views/addCatway.ejs
+++ b/views/addCatway.ejs
@@ -25,6 +25,8 @@
   </style>
 </head>
 <body>
+  <%- include('partials/menu') %>
+
   <h1>Ajouter un nouveau Catway</h1>
 
   <!-- Bouton pour retourner au dashboard -->
