--- a/views/catways.ejs
+++ b/views/catways.ejs
@@ -21,6 +21,8 @@
     </style>
   </head>
   <body>
+    <%- include('partials/menu') %>
+
     <h1>Gestion des Catways</h1>
 
     <!-- Bouton pour retourner au dashboard -->
