--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,7 +14,7 @@
       <li><a href="/catways">Gestion des Catways</a></li>
       <li><a href="/reservations">Gestion des Réservations</a></li>
       <li><a href="/users">Gestion des Utilisateurs</a></li>
-      <li><a href="/api/auth/logout">Se déconnecter</a></li>
+      <li><a href="/logout">Se déconnecter</a></li>
     </ul>
   </body>
 </html>
