--- a/views/editReservation.ejs
+++ b/views/editReservation.ejs
@@ -25,6 +25,8 @@
     </style>
   </head>
   <body>
+    <%- include('partials/menu') %>
+
     <h1>Modifier la Réservation <%= reservation.catwayNumber %></h1>
 
     <!-- Bouton pour retourner au dashboard -->
