--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -25,6 +25,8 @@
     </style>
   </head>
   <body>
+    <%- include('partials/menu') %>
+
     <h1>Modifier l'Utilisateur <%= user.userName %></h1>
 
     <!-- Bouton pour retourner à la gestion des utilisateurs -->
