--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,7 @@
     </p>
     <a href="/register">S'enregistrer</a>
     <a href="/login">Se connecter</a>
+    <!-- Ajout du lien vers la documentation de l'API -->
+    <a href="/documentation">Documentation de l'API</a>
   </body>
 </html>
