--- a/views/addReservation.ejs
+++ b/views/addReservation.ejs
@@ -25,6 +25,8 @@
     </style>
   </head>
   <body>
+    <%- include('partials/menu') %>
+
     <h1>Ajouter une nouvelle Réservation</h1>
 
     <!-- Bouton pour retourner au dashboard -->
