--- a/views/editCatway.ejs
+++ b/views/editCatway.ejs
@@ -21,6 +21,8 @@
     </style>
   </head>
   <body>
+    <%- include('partials/menu') %>
+
     <h1>Modifier le Catway <%= catway.catwayNumber %></h1>
 
     <!-- Bouton pour retourner au dashboard -->
