--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -21,6 +21,8 @@
     </style>
   </head>
   <body>
+    <%- include('partials/menu') %>
+
     <h1>Gestion des Réservations</h1>
 
     <!-- Bouton pour retourner au dashboard -->
