--- a/views/documentation.ejs
+++ b/views/documentation.ejs
@@ -3,27 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Documentation de l'API</title>
-    <style>
-      .btn {
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 16px;
-        margin: 10px 0;
-        color: #fff;
-        background-color: #007bff;
-        text-decoration: none;
-        border-radius: 5px;
-      }
-      .btn:hover {
-        background-color: #0056b3;
-      }
-      pre {
-        background-color: #f4f4f4;
-        padding: 10px;
-        border-radius: 5px;
-      }
-    </style>
   </head>
   <body>
     <%- include('partials/menu') %>
