--- a/views/reservations/editReservation.ejs
+++ b/views/reservations/editReservation.ejs
@@ -3,29 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Modifier la Réservation</title>
-    <style>
-      .alert {
-        color: red;
-        margin: 10px 0;
-      }
-      .btn {
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 16px;
-        margin: 10px 0;
-        color: #fff;
-        background-color: #007bff;
-        text-decoration: none;
-        border-radius: 5px;
-      }
-      .btn:hover {
-        background-color: #0056b3;
-      }
-    </style>
   </head>
   <body>
-    <%- include('partials/menu') %>
+    <%- include('../partials/menu') %>
 
     <h1>Modifier la Réservation <%= reservation.catwayNumber %></h1>
 
