--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,53 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inscription</title>
-    <style>
-      .alert {
-        color: red;
-        margin: 10px 0;
-      }
-      .btn {
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 16px;
-        margin: 10px 0;
-        color: #fff;
-        background-color: #007bff;
-        text-decoration: none;
-        border-radius: 5px;
-      }
-      .btn:hover {
-        background-color: #0056b3;
-      }
-    </style>
+    <title>Enregistrement</title>
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <h1>Inscription</h1>
+    <%- include('partials/menu') %>
 
-    <% if (typeof error !== 'undefined') { %>
-    <div class="alert"><%= error %></div>
-    <% } %>
+    <h1>Enregistrement</h1>
+    <p>Créez un nouveau compte pour accéder à notre système.</p>
 
-    <form action="/register" method="POST">
-      <label for="userName">Nom :</label>
-      <input type="text" id="userName" name="userName" required /><br /><br />
+    <div class="form-container">
+      <form action="/register" method="POST">
+        <div class="form-group">
+          <label for="username">Nom d'utilisateur :</label>
+          <input type="text" id="username" name="username" required />
+        </div>
+        <div class="form-group">
+          <label for="email">Adresse email :</label>
+          <input type="email" id="email" name="email" required />
+        </div>
+        <div class="form-group">
+          <label for="password">Mot de passe :</label>
+          <input type="password" id="password" name="password" required />
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">Confirmer le mot de passe :</label>
+          <input
+            type="password"
+            id="confirmPassword"
+            name="confirmPassword"
+            required
+          />
+        </div>
+        <button type="submit" class="btn">S'enregistrer</button>
+      </form>
 
-      <label for="email">Email :</label>
-      <input type="email" id="email" name="email" required /><br /><br />
-
-      <label for="password">Mot de passe :</label>
-      <input
-        type="password"
-        id="password"
-        name="password"
-        required
-      /><br /><br />
-
-      <label for="role">Rôle :</label>
-      <input type="text" id="role" name="role" required /><br /><br />
-
-      <button type="submit" class="btn">S'inscrire</button>
-    </form>
+      <!-- Lien pour se connecter -->
+      <p>Déjà inscrit ?</p>
+      <a href="/login" class="btn">Se connecter</a>
+    </div>
   </body>
 </html>
