modification des régles de connection : ajout de la validation du mdp

--- a/views/catways/addCatway.ejs
+++ b/views/catways/addCatway.ejs
@@ -13,7 +13,7 @@
   <h1>Ajouter un nouveau Catway</h1>
 
   <!-- Bouton pour retourner au dashboard -->
-  <a href="/dashboard" class="btn">Retour au Dashboard</a><br><br>
+  <a href="/dashboard" class="btn">Retour au Tableau de bord</a><br /><br />
 
   <% if (typeof error !== 'undefined') { %>
     <div class="alert"><%= error %></div>
