--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,7 +15,7 @@
     <h2>Menu</h2>
     <!-- Tableau des liens -->
     <div class="table-container">
-      <table border="1">
+      <table>
         <thead>
           <tr>
             <th>Description</th>
