--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
     <%- include('partials/menu') %>
 
     <h1>Connexion</h1>
-    <p>Connectez-vous pour accéder à votre compte.</p>
+    <p>Connectez-vous pour accéder au menu.</p>
 
     <div class="form-container">
       <form action="/login" method="POST">
