--- a/views/partials/confirmationScript.ejs
+++ b/views/partials/confirmationScript.ejs
@@ -1,5 +1,5 @@
 <script>
   function confirmDeletion() {
-    return confirm("Êtes-vous sûr de vouloir supprimer ce catway ?");
+    return confirm("Êtes-vous sûr de vouloir supprimer ?");
   }
 </script>
