--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -10,7 +10,14 @@
     <%- include('../partials/menu') %>
 
     <h1>Gestion des Utilisateurs</h1>
+
     <p>Gérer les comptes utilisateurs de votre application.</p>
+
+    <!-- Bouton pour retourner au dashboard -->
+    <a href="/dashboard" class="btn">Retour au Tableau de bord</a><br /><br />
+
+    <a href="/register" class="btn btn-primary mb-3">Ajouter un utilisateur</a>
+    <!-- Nouveau bouton pour ajouter un utilisateur -->
 
     <div>
       <table>
