--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,7 @@
 /* Styles généraux */
 body {
   font-family: "Arial", sans-serif;
+  font-size: 14px;
   background-color: var(--background-color);
   color: var(--text-color);
   margin: 0;
@@ -28,6 +29,7 @@ h6 {
 }
 
 h1,
+h2,
 p {
   text-align: center;
 }
@@ -63,13 +65,19 @@ nav ul li a:hover {
 
 /* Styles pour les tableaux */
 
+.table-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 table {
-  width: auto;
+  table-layout: auto;
   border-collapse: collapse;
   margin: 20px 0;
   background-color: var(--white);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  table-layout: auto;
 }
 
 table th,
@@ -93,11 +101,12 @@ table tr:nth-child(even) {
 
 .btn {
   display: inline-block;
+  margin-top: 10px;
+  text-decoration: none;
   padding: 10px 20px;
   font-size: 16px;
   color: var(--white);
   background-color: var(--primary-color);
-  text-decoration: none;
   border-radius: 5px;
   text-align: center;
   width: 200px;
@@ -109,7 +118,13 @@ table tr:nth-child(even) {
 
 /* Styles pour les formulaires */
 .form-container {
-  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form {
+  max-width: 250px;
   margin: 0 auto;
   padding: 20px;
   background-color: var(--white);
@@ -139,33 +154,8 @@ form .form-group input {
   border-radius: 5px;
 }
 
-form button {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  background-color: var(--primary-color);
-  color: var(--white);
-  font-size: 16px;
-}
-
-form button:hover {
-  background-color: var(--secondary-color);
-}
-
-/* Styles pour les liens */
 a.btn {
   display: inline-block;
   margin-top: 10px;
   text-decoration: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  color: var(--white);
-  background-color: var(--primary-color);
-  border-radius: 5px;
-  text-align: center;
-}
-
-a.btn:hover {
-  background-color: var(--secondary-color);
 }
