--- a/views/catways/editCatway.ejs
+++ b/views/catways/editCatway.ejs
@@ -12,7 +12,7 @@
     <h1>Modifier le Catway <%= catway.catwayNumber %></h1>
 
     <!-- Bouton pour retourner au dashboard -->
-    <a href="/dashboard" class="btn">Retour au Dashboard</a><br /><br />
+    <a href="/dashboard" class="btn">Retour au Tableau de bord</a><br /><br />
 
     <form
       action="/catways/<%= catway.catwayNumber %>?_method=PUT"
