--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
     <h2>Menu</h2>
     <!-- Tableau des liens -->
-    <div>
+    <div class="table-container">
       <table>
         <thead>
           <tr>
