--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,14 +9,21 @@
   <body>
     <%- include('partials/menu') %>
 
-    <h1>Enregistrement</h1>
-    <p>Créez un nouveau compte pour accéder à notre système.</p>
-
     <div class="form-container">
+      <h1>Enregistrement</h1>
+      <p>Créez un nouveau compte pour accéder à notre système.</p>
+
       <form action="/register" method="POST">
         <div class="form-group">
           <label for="username">Nom d'utilisateur :</label>
           <input type="text" id="username" name="username" required />
+        </div>
+        <div class="form-group">
+          <label for="role">Rôle :</label>
+          <select id="role" name="role" required>
+            <option value="user">Utilisateur</option>
+            <option value="admin">Administrateur</option>
+          </select>
         </div>
         <div class="form-group">
           <label for="email">Adresse email :</label>
@@ -25,6 +32,10 @@
         <div class="form-group">
           <label for="password">Mot de passe :</label>
           <input type="password" id="password" name="password" required />
+          <small class="form-text"
+            >Le mot de passe doit contenir au moins 8 caractères, une majuscule,
+            une minuscule, un chiffre et un caractère spécial.</small
+          >
         </div>
         <div class="form-group">
           <label for="confirmPassword">Confirmer le mot de passe :</label>
@@ -38,9 +49,7 @@
         <button type="submit" class="btn">S'enregistrer</button>
       </form>
 
-      <!-- Lien pour se connecter -->
-      <p>Déjà inscrit ?</p>
-      <a href="/login" class="btn">Se connecter</a>
+      <p>Déjà inscrit ? <a href="/login" class="btn">Se connecter</a></p>
     </div>
   </body>
 </html>
