--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -16,8 +16,8 @@
     <!-- Bouton pour retourner au dashboard -->
     <a href="/dashboard" class="btn">Retour au Tableau de bord</a><br /><br />
 
+    <!-- Bouton pour ajouter un utilisateur -->
     <a href="/register" class="btn btn-primary mb-3">Ajouter un utilisateur</a>
-    <!-- Nouveau bouton pour ajouter un utilisateur -->
 
     <div>
       <table>
